--- a/SysSpy.Desktop/App.xaml
+++ b/SysSpy.Desktop/App.xaml
@@ -7,8 +7,8 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Styles/Button.xaml"/>
+                <ResourceDictionary Source="Styles/Ellipse.xaml"/>
                 <ResourceDictionary Source="Styles/Separator.xaml"/>
-                <ResourceDictionary Source="Styles/TabControl.xaml"/>
                 <ResourceDictionary Source="Styles/UserControl.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
