removed name from collection properties

--- a/SysSpy.Desktop/MainWindow.xaml
+++ b/SysSpy.Desktop/MainWindow.xaml
@@ -55,7 +55,7 @@
         </Grid>
 
         <Grid>
-            <TabControl ItemsSource="{Binding Test}">
+            <TabControl ItemsSource="{Binding SystemElementsTabsViewModels}">
                 <TabControl.ItemTemplate>
                     <DataTemplate DataType="viewModel:ElementsInfoViewModel">
                         <controls:ElementsInfoTabItemHeader/>
